# glitch-gremlin-ai

./: .dockerignore  .env.example  .eslintrc.json  .gitconfig  .gitignore  Anchor.toml  Cargo.toml  DEPLOYMENT.md  DESIGN.md  FORMAL_SPEC.md  PRIVILEGED_OPS.md  README.md  SECURITY.md  TEST_VECTORS.md  TODO.md  VERSIONS.md  WORKFLOW.md  babel.config.cjs  babel.config.js  bpfel-unknown-none.json  build.rs  ggaibHbkueLMekRyQ1i6PrjJBYQTPrArsiaK3LhfJDA.json  jest.config.js  jest.config.ts  jest.fuzz.config.js  jest.mutation.config.js  jest.resolver.mjs  jest.security.config.js  jest.setup.js  jest.setup.ts  package.json  pnpm-workspace.yaml  r4VeuCcgGtt5PPhmmsLbjMto8quLbM141ETXLohAgov.json  rust-toolchain  rust-toolchain.toml  sbf-solana-solana.json  terminal  tsconfig.cjs.json  tsconfig.esm.json  tsconfig.json  (+6 more)
cli/: Cargo.toml  README.md  jest.config.js  jest.config.ts  jest.setup.js  jest.setup.mjs  jest.setup.ts  package.json  tsconfig.json  tsconfig.tsbuildinfo
cli/src/: address-validator.ts  glitch-sdk.ts  governance.ts  index.ts  main.rs  proof-system.ts  security.ts  types.ts
cli/src/__mocks__/@glitch-gremlin/: sdk.ts
cli/src/__tests__/: cli.test.ts  governance.test.ts  ml-model.test.ts  setup.ts  test-helpers.ts
cli/src/config/: governance.ts
cli/src/utils/: errors.ts
programs/governance/: Cargo.toml  LAUNCH_CHECKLIST.md  README.md  build.rs  package.json  tsconfig.json
programs/governance/benches/: forecasting_benchmarks.rs
programs/governance/src/: chaos_test.rs  error.rs  git_utils.rs  gremlin_config.rs  kani_patches.rs  lib.rs  model_voting.rs  pda.rs  state.rs
programs/governance/src/ai_assistant/: groq_client.rs  mod.rs
programs/governance/src/allocator/: config.rs  memory.rs  mod.rs  monitor.rs
programs/governance/src/chaos/: chaos_types.rs  deployment_verifier.rs  fuzzer.rs  governance_checks.rs  harness.rs  mod.rs  monitoring.rs  monitoring_test.rs  security.rs  test_runner.rs  testing.rs  training.rs
programs/governance/src/chaos_analyzer/: ast_visitor.rs  contract_tester.rs  mod.rs  solana_patterns.rs  vulnerabilities.rs
programs/governance/src/deploy/: mod.rs  verifier.rs
programs/governance/src/hash/: collections.rs  gremlin.rs  mod.rs  sbf.rs  std_hash.rs
programs/governance/src/monitoring/: ai_integration.rs  auto_response.rs  blockchain_monitor.rs  dashboard.rs  forecasting.rs  metrics.rs  mod.rs  proposal_tracker.rs  state_estimation.rs  storage.rs  test.rs  test_execution.rs
programs/governance/src/prompts/: chaos_agent.txt
programs/governance/src/rpc/: helius_client.rs
programs/governance/src/server/: mod.rs
programs/governance/src/state/: execution.rs  governance.rs  governance_state.rs  mod.rs  proposal.rs  stake_account.rs  vote_record.rs
programs/governance/src/tests/: token_economics.rs
programs/governance/tests/: Cargo.toml  chaos_test_runner.rs  chaos_testing.rs  chaos_tests.rs  deployment_verification.rs  e2e.rs  e2e_chaos_test.rs  governance.ts  governance_tests.rs  integration.rs  integration_tests.rs  test_config.rs
programs/governance/tests/config/: test_config.rs
programs/governance/tests/src/: integration.rs  lib.rs
sdk/: Cargo.toml  README.md  eslint.config.js  jest.config.js  jest.setup.ts  package.json  tsconfig.cjs.json  tsconfig.esm.json  tsconfig.json  tsconfig.tsbuildinfo
sdk/src/: chaosTester.ts  cli.js  cli.ts  errors.js  errors.ts  global.d.ts  governance.js  governance.ts  index.d.ts  index.js  index.ts  lib.rs  rate-limit.js  rate-limit.ts  sdk.js  sdk.ts  token-economics.js  token-economics.ts  types.js  types.js.map  types.ts  utils.js  utils.ts
sdk/src/__mocks__/: ioredis.ts
sdk/src/__tests__/: fuzzer.test.js  fuzzer.test.ts  governance-manager.test.js  governance-manager.test.ts  governance.test.js  governance.test.ts  jest.d.ts  ml-model.test.js  ml-model.test.ts  rate-limiting.test.js  rate-limiting.test.ts  redis-queue.test.ts  redis-worker.test.js  redis-worker.test.ts  sdk.test.js  sdk.test.ts  setup.js  setup.ts  setupAfterEnv.ts  staking.test.js  staking.test.ts  token-economics.test.js  token-economics.test.ts
sdk/src/__tests__/helpers/: redis-mock.ts
sdk/src/ai/: CONTRIBUTING.md  FUZZING_FRAMEWORK_DESIGN.md  README.md  anomaly-detection.test.ts  anomaly-detection.ts  chaos-fuzz.test.ts  chaos-fuzz.ts  chaosGenerator.ts  fuzzer.test.ts  fuzzer.ts  jest.config.ts  jest.setup.ts  ml-model.js  ml-model.test.ts  ml-model.ts  mutation-operators.ts  package.json  reinforcement-fuzzing.ts  security-metrics-collector.ts  security-report-generator.ts  tsconfig.json  tsconfig.test.json  types.ts  vulnerability-detection.ts
sdk/src/ai/__mocks__/: tensorflow-mock.ts  tfjs-node.ts
sdk/src/ai/__tests__/: anomaly-detection.test.ts  chaos-fuzz.test.ts  fuzzer.test.ts  jest.setup.ts  ml-model.test.ts  model.test.ts  reinforcement-fuzzing.test.ts  security-scoring.test.ts  setup.ts  test-setup.ts
sdk/src/ai/docs/: ai-module.md  api-reference.md  best-practices.md  reinforcement-fuzzing-model.md
sdk/src/ai/src/: anomaly-detection.ts  chaos-fuzz.ts  chaos-tester.ts  chaosGenerator.ts  concrete-ml-model.ts  dashboard-server.ts  edge-case-generator.ts  errors.ts  fuzzer.js  fuzzer.ts  fuzzing-strategy.ts  index.ts  logger.ts  metric-visualization.ts  ml-model.js  ml-model.ts  mutation-generator.ts  mutation-operators.ts  reinforcement-fuzzing-main.ts  reinforcement-fuzzing-utils.ts  reinforcement-fuzzing.ts  security-config-manager.ts  security-metrics-collector.ts  security-report-generator.ts  solana-metrics-collector.ts  time-series-analysis.ts  tsconfig.json  types.js  (+4 more)
sdk/src/metrics/: collector.ts
sdk/src/queue/: redis-queue-worker.ts  redis-worker.js  redis-worker.ts
sdk/src/sdk/: index.ts
sdk/src/types/: config.ts  index.ts  redis.d.ts  redis.ts
sdk/src/utils/: logger.ts  redis-client.ts  redis-factory.ts
sdk/test-model/: model.json
sdk/test-models/model/: model.json
src/token/governance-program/: Cargo.toml
src/token/governance-worker/: Cargo.toml
src/token/program/: Cargo.toml
src/token/shared/: Cargo.toml
src/token/worker/: Cargo.toml  build.rs
(+195 files in other folders)
