[package]
name = "glitch-gremlin-program"
version = "0.1.0"
description = "On-chain program for Glitch Gremlin AI protocol"
edition = "2021"
license = "MIT"

[dependencies]
# Solana ecosystem
solana-sdk = "=1.18.26"
solana-program = "=1.18.26"
anchor-lang = { version = "=0.30.1", features = ["derive"] }
anchor-spl = "=0.30.1"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Serialization
borsh = "0.10"
borsh-derive = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async runtime & networking
tokio = { version = "1.36", features = ["full"] }
axum = { version = "0.7", features = ["http1", "http2", "macros"] }
hyper = { version = "1.1", features = ["server", "http1", "http2"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["fs"] }
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }

# Database & caching
redis = { version = "0.23", features = ["tokio-comp"] }
mongodb = { version = "2.8.2", default-features = false, features = ["tokio-sync"] }

# Cryptography & security
zeroize = { version = "=1.3.0", features = ["zeroize_derive"] }
ring = { version = "0.17", features = ["std"] }
sha2 = "0.10"
curve25519-dalek = { version = "=3.2.1", features = ["u64_backend"] }
ed25519-dalek = { version = "=1.0.1", features = ["u64_backend"] }
rand = "0.8"

# Utilities
futures = "0.3.30"
bv = "0.11.1"
arrayref = "0.3.7"
memoffset = "0.9"
static_assertions = "1.1"

# Base64 for decoding account data
base64 = "0.21.0"

# Time handling
time = { version = "0.3", features = ["macros"] }
log = "0.4.25"
env_logger = "0.11.6"

[features]
default = ["custom-heap", "custom-panic"]
custom-heap = []
custom-panic = []
test = []

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1

[dev-dependencies]
tokio = { version = "1.0", features = ["full", "test-util"] }

[[example]]
name = "basic"
path = "examples/basic.rs"
required-features = ["test"]

[workspace]
members = [
    "programs/governance"
]
