[package]
name = "glitch-gremlin"
version = "0.1.0"
description = "Glitch Gremlin AI monorepo"
edition = "2021"
license = "MIT"

# Force SBF toolchain resolution
[patch.crates-io]
solana-sbf-tools = { git = "https://github.com/anza-xyz/sbpf.git", branch = "main" }
solana-sdk = { git = "https://github.com/anza-xyz/solana-sdk.git", branch = "master" }  # Replacing solana-program with solana-sdk per new dependency strategy

[workspace]
members = [
    "programs/*"
]

[workspace.dependencies]
trident-fuzz = { version = "0.3.1", features = ["afl", "honggfuzz"] }
# Core Solana dependencies
# Implementation of FuzzDelSol architecture based on:
# "Fuzz on the Beach: Fuzzing Solana Smart Contracts" by Smolka et al. (arXiv:2309.03006)
solana-sdk = { git = "https://github.com/anza-xyz/solana-sdk.git", branch = "master", features = ["sbfv1", "borsh", "no-entrypoint"] }
solana-program-test = "1.17.0"
solana-runtime = "1.17.0"
solana-logger = "1.17.0"
solana-sbf-loader-program = "1.17.0"
solana-compute-budget = "1.17.0"
solana-account-decoder = "1.17.0"
solana-banks-client = "1.17.0"
solana-banks-interface = "1.17.0"
solana-banks-server = "1.17.0"
solana-cli-config = "1.17.0"
solana-cli-output = "1.17.0"
solana-client = "1.17.0"
solana-transaction-status = "1.17.0"
solana-zk-token-sdk = "1.17.0"
solana-measure = "1.17.0"
solana-metrics = "1.17.0"
solana-frozen-abi = "1.17.0"
solana-frozen-abi-macro = "1.17.0"
solana-validator = "1.17.0"
solana-test-validator = "1.17.0"
solana-faucet = "1.17.0"
solana-gossip = "1.17.0"
solana-streamer = "1.17.0"
solana-version = "1.17.0"

# Anchor dependencies
anchor-lang = { version = "0.29.0", features = ["init-if-needed", "derive", "event-cpi"] }
anchor-spl = { version = "0.29.0", features = ["metadata", "mint", "token"] }

# Security dependencies
ring = { version = "0.17.7", features = ["std", "alloc"] }
zeroize = { version = "1.7.0", features = ["zeroize_derive"] }
curve25519-dalek = { version = "4.1.1", features = ["simd_backend"] }
ed25519-dalek = { version = "2.1.0", features = ["serde"] }

# Monitoring dependencies
metrics = { version = "0.22.1", features = ["std"] }
tracing = { version = "0.1.40", features = ["attributes", "async-await", "log", "std"] }
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "time", "local-time"] }
tracing-futures = { version = "0.3", features = ["std-future", "futures-03", "async-await", "instrumentation"] }
opentelemetry = { version = "0.21.0", features = ["rt-tokio", "metrics", "trace", "logs"] }
prometheus = { version = "0.13.3", features = ["process", "push"] }
solana-sbf-allocator = "1.17.0"  # DESIGN.md 9.3.1 Memory quarantine

# Common dependencies
borsh = "0.10.3"
borsh-derive = "0.10.3"
bytemuck = { version = "1.14.0", features = ["derive"] }
thiserror = "1.0.50"
num-traits = "0.2"
num-derive = "0.4"
serde = { version = "1.0", features = ["derive", "std"] }
serde_json = "1.0"
tokio = { version = "1.36.0", features = ["full"] }
futures = "0.3.30"
bv = "0.11.1"
arrayref = "0.3.7"
memoffset = "0.9"
static_assertions = "1.1"
ahash = "0.8.9"
base64 = "0.21.7"
time = { version = "0.3", features = ["macros"] }
log = "0.4.25"
env_logger = { version = "0.10.0", features = ["auto-color", "humantime"] }
sha2 = "0.10.6"

[features]
default = ["secure-mode", "post-quantum", "monitoring"]
secure-mode = []
sbf-optimized = ["solana-sdk/sbf-instrs", "solana-sbf-allocator"]
post-quantum = []
monitoring = []
test = ["secure-mode", "monitoring"]
test-full = ["test", "post-quantum"]

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
opt-level = 3
debug = false
panic = "abort"
strip = true
codegen-backend = "llvm"  # Required for SBF SIMD
target-cpu = "sbfv2"     # Enables 4-way parallel ops
incremental = false

[profile.release.build-override]
opt-level = 3
codegen-units = 1
debug = false
overflow-checks = true

[profile.test]
opt-level = 3
debug = true
debug-assertions = true
overflow-checks = true
lto = "thin"
incremental = true

[profile.test.build-override]
opt-level = 3
codegen-units = 256
debug = true
debug-assertions = true
overflow-checks = true

[profile.sbf]
inherits = "release"
panic = "abort"
opt-level = 3
codegen-units = 1
lto = "fat"
debug = false
strip = true
target = "sbfv2-solana-solana"  # Updated for SBF v2 toolchain
rustflags = ["-C", "link-arg=-znotext", "-C", "link-arg=-Bsymbolic"]
debug-assertions = false
overflow-checks = true
