[package]
name = "glitch-sdk"
version = "0.1.0"
edition = "2021"
authors = ["Glitch Gremlin Team"]
description = "SDK for interacting with Glitch Gremlin AI"
license = "MIT"

[dependencies]
solana-client = "1.18.26"
solana-sdk = "1.18.26"
borsh = "0.10.3"
tokio = { version = "1.0", features = ["full"] }
glitch-shared = { path = "../src/token/shared" }
