[package]
name = "glitch-sdk"
version = "0.1.0"
edition = "2021"
authors = ["Glitch Gremlin Team"]
description = "SDK for interacting with Glitch Gremlin AI"
license = "MIT"

[dependencies]
solana-client = { git = "https://github.com/solana-labs/solana", tag = "v1.16.12" }
solana-sdk.workspace = true
borsh = { workspace = true, features = ["derive"] }
tokio.workspace = true
glitch-gremlin-shared = { path = "../src/token/shared" }
solana-program.workspace = true
