[package]
name = "glitch-gremlin-governance"
version = "0.1.0"
description = "Governance program for Glitch Gremlin chaos testing platform"
edition = "2021"
license = "Apache-2.0"

[lib]
crate-type = ["cdylib", "lib"]

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { workspace = true }
anchor-spl = { workspace = true }
bytemuck = { version = "1.13", features = ["derive"] }
thiserror = "1.0"
num-derive = "0.4"
num-traits = "0.2"
arrayref = "0.3.7"
borsh = "0.10.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3.3"
sha2 = "0.10.7"
base64 = "0.21.2"
rand = "0.8.5"
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1.72"
futures = "0.3.28"
tokio = { version = "1.29.1", features = ["full"] }
reqwest = { version = "0.11.18", features = ["json"] }
mongodb = { version = "2.6.0", features = ["tokio-runtime"] }
redis = { version = "0.23.0", features = ["tokio-comp"] }
bs58 = { workspace = true }
solana-program = { workspace = true }
solana-client = { workspace = true }
solana-sdk = { workspace = true }
solana-account-decoder = { workspace = true }
solana-transaction-status = { workspace = true }
solana-banks-interface = { workspace = true }
solana-banks-client = { workspace = true }
solana-runtime = { workspace = true }
time_series_generator = "0.2.0"
circular-buffer = "0.1.6"
metrics = "0.21"
metrics-exporter-prometheus = "0.12"
statrs = "0.16"
linreg = "0.2"
moving_average = "1.1.0"
seasonal = "0.3.1"
exponential-smoothing = "1.1.0"

[dev-dependencies]
solana-program-test = { workspace = true }
solana-sdk = { workspace = true }
assert_matches = "1.5" 