[package]
name = "glitch_gremlin_governance"
version = "0.1.0"
description = "Governance program for Glitch Gremlin AI"
edition = "2021"
license = "Apache-2.0"

[lib]
crate-type = ["cdylib", "lib"]

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []
test-sbf = []

[dependencies]
anchor-lang = { version = "=0.30.1", features = ["init-if-needed"] }
anchor-spl = "=0.30.1"
solana-program = "=1.18.26"
spl-token = { version = "=4.0.0", features = ["no-entrypoint"] }
mpl-token-metadata = { version = "=1.13.1", features = ["no-entrypoint"] }
bytemuck = { version = "1.13", features = ["derive"] }
thiserror = "1.0"
num-derive = "=0.3.3"
num-traits = "0.2.19"
arrayref = "0.3.7"
borsh = "0.10.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
solana-program-test = "=1.18.26"
solana-sdk = "=1.18.26"
