[package]
name = "glitch-gremlin-governance-program"
version = "0.1.0"
edition = "2021"
description = "Governance program for Glitch Gremlin"
license = "Apache-2.0"

[features]
no-entrypoint = []
test-bpf = []

[dependencies]
solana-program = { workspace = true }
borsh = { workspace = true, features = ["derive"] }
borsh-derive = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = "=1.0.56"
num-derive = "=0.4"
num-traits = "=0.2"
spl-token = { version = "=4.0", features = ["no-entrypoint"] }
strum = { version = "=0.25", features = ["derive"] }
glitch-gremlin-shared = { path = "../shared" }

[dev-dependencies]
solana-program-test = { workspace = true }
solana-sdk = { workspace = true }
solana-validator = { workspace = true }
solana-cli-config = { workspace = true }
tokio = { workspace = true }

[lib]
name = "glitch_gremlin_governance"
crate-type = ["cdylib", "lib"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

