[package]
name = "glitch-governance-worker"
version = "0.1.0"
edition = "2021"

[dependencies]
borsh = "0.10.3"
borsh-derive = "0.10.3"
solana-program = "1.18.26"
solana-client = "1.18.26"
tokio = { version = "1.0", features = ["full"] }
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
