[package]
name = "glitch-governance-worker"
version = "0.1.0"
edition = "2021"

[dependencies]
borsh = "0.10.3"
borsh-derive = "0.10.3"
solana-sdk.workspace = true
solana-client = "1.18.26"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
chrono = "0.4"
log = "0.4.20"
mongodb.workspace = true
redis.workspace = true
tokio.workspace = true
bson.workspace = true
serde_json.workspace = true
