[package]
name = "glitch-gremlin"
version = "0.1.0"
edition = "2021"
description = "Glitch Gremlin AI Solana Program"
license = "MIT"
repository = "https://github.com/your-org/glitch-gremlin-ai"
authors = ["Your Name <your.email@example.com>"]

[dependencies]
solana-program = "=1.18.26"
strum = { version = "0.25", features = ["derive"] }
solana-sdk = "=1.18.26"
glitch-shared = { path = "../shared" }
borsh = "=0.10.3" 
borsh-derive = "=0.10.3"
spl-token = { version = "=3.5.0", features = ["no-entrypoint"] }
thiserror = "=1.0.56"
arrayref = "=0.3.7"
bls12_381 = "0.7.0"
bellman = "0.12.0"
pairing = "0.23.0"
byteorder = "1.4.3"
solana-zk-token-sdk = "1.18.26"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full", "rt-multi-thread"] }
solana-program-test = "1.18.26"
solana-bpf-loader-program = "1.18.26"

[dev-dependencies]
solana-program-test = "1.18.26"
solana-sdk = "1.18.26"
tokio = { version = "1.14", features = ["full"] }
assert_matches = "1.5.0"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3

[package.metadata.sbf-settings]
sbf-tools-version = "1.30"
sbf-sdk-version = "1.18.26"
toolchain = "sbf-solana-solana"

[target.sbf-solana-solana]
rustflags = [
    "-C", "link-arg=-z",
    "-C", "link-arg=notext",
    "-C", "link-arg=-Tbpfelldbg",
    "-C", "link-arg=-shared",
    "-C", "link-arg=--Bdynamic",
    "-C", "link-arg=-Ldeps/solana-sdk/sbf-solana-solana/rust/lib/rustlib/sbf-solana-solana/lib"
]

[lib]
crate-type = ["cdylib", "lib"]

[features]
default = []
no-entrypoint = []
no-log = []
test-bpf = []
test-utils = []
