[package]
name = "glitch-gremlin-program"
version = "0.1.0"
edition = "2021"
description = "Chaos engineering program for Solana"
license = "Apache-2.0"

[features]
default = ["quantum-resistant"]
no-entrypoint = []
test-bpf = []
quantum-resistant = ["dep:crystals-dilithium"]
hardware-security = [
    "dep:sgx_types",
    "dep:sgx-isa",
    "getrandom/rdrand",
    "rand/std_rng"
]
full-security = ["quantum-resistant", "hardware-security"]
error-context = ["dep:backtrace", "dep:eyre"]

[dependencies]
solana-program = { workspace = true }
borsh = { workspace = true, features = ["derive"] }
borsh-derive = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = "1.0.56"
num-derive = "0.4"
num-traits = "0.2"
spl-token = { version = "4.0", features = ["no-entrypoint"] }
strum = { version = "0.25", features = ["derive", "strum_macros"] }
strum_macros = "0.25"
ed25519-dalek = { version = "1.0", features = ["serde", "u64_backend"] }
bls12_381 = { version = "0.8", features = ["groups", "pairings", "experimental"] }
byteorder = { version = "1.5.0", features = ["std"] }
bellman = { version = "0.14", features = ["groth16", "multicore"] }
sha2 = { version = "0.10", features = ["oid", "compress", "asm"] }
base64 = { version = "0.13", features = ["std"] }

# Error handling enhancements
backtrace = { version = "0.3", optional = true }
eyre = { version = "0.6", optional = true }

# Optional security dependencies
crystals-dilithium = { version = "1.0.0", optional = true }
sgx_types = { version = "1.1.2", optional = true }
sgx-isa = { version = "0.4.0", optional = true }

# System dependencies
libc = { version = "0.2", features = ["extra_traits", "const-extern-fn"] }
rand = { version = "0.8", features = ["std", "getrandom"] }
getrandom = { version = "0.2", features = ["std"] }

[dev-dependencies]
solana-program-test = { workspace = true }
solana-sdk = { workspace = true }
solana-validator = { workspace = true }
solana-cli-config = { workspace = true }
tokio = { workspace = true }

[lib]
name = "glitch_gremlin_program"
crate-type = ["cdylib", "lib"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[target.'cfg(not(target_os = "solana"))'.dependencies]
solana-program = { version = "=1.18.26" }

[target.sbf-solana-solana.dependencies]
solana-program = { version = "=1.18.26" }
