[package]
name = "glitch-shared"
version = "0.1.0"
edition = "2021"
authors = ["Glitch Gremlin Team"]
description = "Shared utilities for Glitch Gremlin"
license = "MIT"

[lib]
name = "glitch_shared"
path = "src/lib.rs"

[dependencies]
solana-program = "1.18.26"
solana-sdk = "1.18.26" 
solana-program-test = "1.18.26"
borsh = "0.10.3"
borsh-derive = "0.10.3"
spl-token = { version = "3.5.0", features = ["no-entrypoint"] }

[dev-dependencies]
