[package]
name = "glitch-worker"
version = "0.1.0"
edition = "2021"
authors = ["Glitch Gremlin Team"]
description = "Off-chain worker for Glitch Gremlin chaos testing"
license = "MIT"

[dependencies]
solana-sdk.workspace = true
solana-program.workspace = true
spl-token = { version = "3.2.0" }
borsh.workspace = true
borsh-derive = "0.10.3"
hex = "0.4"
solana-client = "1.18.26"
solana-program-test = "1.18.26"
glitch-shared = { path = "../shared" }
syscallz = "0.17"
log = "0.4"
thiserror = "1.0"
libc = "0.2"
mongodb.workspace = true
redis.workspace = true
tokio = { version = "1.0", features = ["full"] }
bson.workspace = true
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
