[package]
name = "glitch-gremlin-worker"
version = "0.1.0"
edition = "2021"
description = "Worker service for Glitch Gremlin chaos testing"

[dependencies]
tokio = { workspace = true, features = ["full", "sync"] }
futures = { version = "=0.3", features = ["std", "async-await"] }
futures-util = { version = "=0.3", features = ["sink"] }
solana-client = "=1.18.26"
solana-sdk = { workspace = true }
solana-program = { workspace = true }
borsh = { workspace = true, features = ["derive"] }
borsh-derive = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
glitch-gremlin-program = { path = "../program" }
thiserror = "=1.0.56"
log = { version = "=0.4", features = ["max_level_trace", "release_max_level_info"] }
env_logger = "=0.10"
spl-token = { version = "=4.0", features = ["no-entrypoint"] }
hex = "=0.4"
redis = { workspace = true }
bson = { workspace = true }
rand = { version = "=0.8", features = ["std", "std_rng"] }
seccomp-sys = "=0.1.3"
strum = { version = "=0.25", features = ["derive"] }
libc = "=0.2"
syscallz = "=0.17"

[target.'cfg(target_os = "linux")'.dependencies]
nix = { version = "=0.26", optional = true }
landlock = { version = "=0.2.0", optional = true }

[features]
default = []
linux-security = ["dep:nix", "dep:landlock"]

[dev-dependencies]
tokio-test = "=0.4"
solana-program-test = { workspace = true }
criterion = { version = "=0.5", features = ["async_tokio"] }
